pages/assets/css/basic.css
/* ... */
@font-face {
    font-family: 'Bebas Kai';
    src: url('../fonts/BebasKai/BebasKai.eot');
    src: url('../fonts/BebasKai/BebasKai.eot?#iefix') format('embedded-opentype'),
        url('../fonts/BebasKai/BebasKai.woff2') format('woff2'),
        url('../fonts/BebasKai/BebasKai.woff') format('woff'),
        url('../fonts/BebasKai/BebasKai.ttf') format('truetype'),
        url('../fonts/BebasKai/BebasKai.svg#BebasKai') format('svg');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Europa';
    src: url('../fonts/Europa/Europa-Regular.eot');
    src: url('../fonts/Europa/Europa-Regular.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Europa/Europa-Regular.woff2') format('woff2'),
        url('../fonts/Europa/Europa-Regular.woff') format('woff'),
        url('../fonts/Europa/Europa-Regular.ttf') format('truetype'),
        url('../fonts/Europa/Europa-Regular.svg#Europa-Regular') format('svg');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Europa';
    src: url('../fonts/Europa/Europa-Bold.eot');
    src: url('../fonts/Europa/Europa-Bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Europa/Europa-Bold.woff2') format('woff2'),
        url('../fonts/Europa/Europa-Bold.woff') format('woff'),
        url('../fonts/Europa/Europa-Bold.ttf') format('truetype'),
        url('../fonts/Europa/Europa-Bold.svg#Europa-Bold') format('svg');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

:root {
    --pg-font-family-base: "Europa", Arial, sans-serif;
    --pg-font-family-title: "Bebas Kai", Arial, sans-serif;
    --pg-brand-color-dark: #11224e;
    --pg-brand-color: #11224e;
    --pg-brand-color-light: #1a3b70;
    --pg-brand-color-lighter: #2c599d;
    --pg-brand-color-lightest: #5c83c4;
    --pg-brand-color-highlight: #aec5eb;
    --pg-grey: #acabab;
    --pg-secondary-color: #f2944a;
    --pg-secondary-color-lighter: #edab77;
    --pg-secondary-color-darker: #d28041;
    --font-weight-default: 300;
    --bs-body-font-weight: 300;
    --bs-body-font-size: 1.125rem;
    --bs-body-line-height: 1.8;
    --bs-primary-rgb: var(--pg-brand-color);
    --orange-gradient: linear-gradient(#ffb858, #ea7519);
    --white-gradient: linear-gradient(white, 90%, transparent);
    --blue-gradient: linear-gradient(#5a81c0, #3f5b88);
    --small-box-shadow: rgba(0,0,0,0.1) 0 3px 4px 1px;
}
html {
    font-size: 1em;
}
body {
    color: var(--pg-brand-color-light);
    font-family: var(--pg-font-family-base);
}
h1, h2, h3, h4, h5, h6 {
    font-family: var(--pg-font-family-base);
    font-weight: 300;
}
h1 {
    font-family: var(--pg-font-family-title);
    font-size: 6rem;
}
h2 {
    font-family: var(--pg-font-family-title);
    font-size: 3rem;
    line-height: 1.1;
}
h3 {
    font-family: var(--pg-font-family-title);
    font-size: 2rem;
}
h4 {
    font-size: 1.8rem;
    text-transform: uppercase;
    font-weight: 700;
}
ul {
    margin-left: 0;
    line-height: var(--bs-body-line-height);
}
a {
    -webkit-transition: .3s all ease;
    -o-transition: .3s all ease;
    transition: .3s all ease;
    color: var(--pg-brand-color-lighter);
}
a:hover {
    color: var(--pg-brand-color-lightest);
}
a:active {
    color: var(--pg-brand-color-lightest);
}
.link-light {
    color: var(--pg-brand-color-highlight) !important;
}
a.white {
    color: white;
}
strong {
    font-weight: bold;
}
hr {
    color: var(--pg-brand-color);
    opacity: 1;
}
#section-give #payment-form .payment-checkbox input,
input[type="radio"] {
    -webkit-appearance: none;
    appearance: none;
    background-color: #fff;
    margin: 0;

    border: 2px var(--pg-grey) solid;
    border-radius: 50%;
    width: 1.5em;
    height: 1.5em;
    transform: translateY(6px);
}
#section-give #payment-form .payment-checkbox input:checked,
input[type="radio"]:checked {
    border: 8px solid var(--pg-brand-color-lighter);
}
.form-check-input:checked {
    background-color: var(--pg-brand-color-lighter);
    border-color: var(--pg-brand-color-lighter);
}
.navbar {
    --bs-navbar-brand-color: var(--pg-brand-color);
}
.navbar a {
    text-decoration: none;
}
.form-control {
    font-weight: 300;
    color: #495057;
}
.form-control:focus {
    border-color: var(--pg-brand-color-highlight);
    box-shadow: 0 0 0 0.25rem rgba(92, 131, 196, 0.25);
}
.center {
    text-align:center;
}
.left-align {
    text-align: left;
}
.six-em {
    line-height: 1.3;
    font-size: 6em;
}
.four-em {
    font-size: 4em;
}
.three-em {
    font-size: 3em;
}
.two-em {
    font-size: 2em;
}
.two-rem {
    font-size: 2rem;
}
.one-em {
    font-size: 1.5em;
}
.one-rem {
    font-size: 1.2rem;
}
.icon-small {
    font-size: 3rem;
}
.icon-medium {
    font-size: 4rem;
}
.icon-large {
    font-size: 6rem;
}
.small {
    font-size: 14px;
}
.font-weight-bold {
    font-weight: 700;
}
.font-weight-normal {
    font-weight: 300;
}
.font-italic {
    font-style: italic;
}
.uppercase {
    text-transform: uppercase;
}
.lh-xsm {
    line-height: 0.8;
}
.w-fit {
    width: fit-content;
}
.font-title {
    font-family: var(--pg-font-family-title);
}
.font-base {
    font-family: var(--pg-font-family-base);
}
@media (max-width: 768px) {
    .six-em {
        font-size: 3em ;
    }
    .four-em {
        font-size: 2.5rem ;
    }
    .three-em {
        font-size: 1.7em ;
    }
    .two-em {
        font-size: 1.2em ;
    }
    .one-em {
        font-size: 1em ;
    }
    .two-rem {
        font-size: 1.4rem;
    }
    .pg-navbar .two-rem {
        font-size: 2rem;
    }
}
@media (min-width: 768px) {
    h2 {
        font-size: 4rem;
    }
    .icon-large {
        font-size: 7rem;
    }
    .icon-medium {
        font-size: 5rem;
    }
}
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}
/* ... */

